   replacements throughout the code)
April 4, 2000
 - dynamic registration of user interface (TOmnetApp) classes introduced.
   (The formerly used method didn't make it possible to create separate DLLs
   on Windows: envir.dll, tkenv.dll, cmdenv.dll).
   See appreg.h, the Register_OmnetApp macros in cmdenv.cc and tkapp.cc,
   and the chooseBestOmnetApp() function in envir.cc.
April 6-10, 2000
 - changes to enable linking a Windows DLL from the library
 - the memoryIsLow() utility function was placed into this library, and now
   it works through a new TOmnetApp::memoryIsLow() function.
 - the "-u <user-interface>" command-line parameter is now understood by envir:
   this can be used to select the user interface if both Cmnenv and Tkenv is
   linked in (or is dynamically loaded).
   The [General]/user-interface= ini file option was also added, with the same
   functionality.
   This allows the user to link the simulation without Cmdenv and Tkenv, and
   load one of them at runtime, with a line like this in omnetpp.ini:
       [General]
       load-libs=../../lib/tkenv.so
       user-interface=Tkenv
   Or the command-line equivalent:
       mysim  -l ../../lib/tkenv.so  -u Tkenv
   To allow all the above, the setup procedure (cEnvir::setup()) and
   the constructor and the setup() function of TOmnetApp was reorganized.
Apr 10, 2000
 - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
 - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
May 7, 2000
 - Makefile.vc improvements from Balazs Kelemen
------ omnetpp-2.0b4 released ------
------ omnetpp-2.0b5 released ------
June 19, 2000
 - bugfix: TOmnetApp::getOutVectorConfig() crashed when it was called with
   vecname being NULL (on Solaris; other systems seem to tolerate NULL
   being passed to sprintf() as a "%s" argument) [reported by Ulrich Kaage]
Jan 16, 2001
 - added Speedometer class
Feb 6, 2001
 - added dllexport to Speedometer
------ omnetpp-2.0 released ------